2013-04-24  Thomas Mattison  <mattison <at> phas.ubc.ca>

	* src/fit.c:  Optional one-line progress reports. Move code to output
	status reports and final results to new routines.
	Patchset #230.

	* src/fit.c (regress):  Fit did not converge if maximum lambda was
	exceeded.  Add new message for this case.

2013-04-24  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/fit.c|h src/save.c src/set.c src/show.c src/unset.c docs/gnuplot.doc:
	New options quiet|results|brief|verbose for `set fit` to select verbosity
	of fit's output.  Default to brief one-line reports.  'verbose' selects the
	traditional full report.

	* src/fit.c (backup_file):  Remove code path for Win32s.

	* src/fit.c (show_results):  Print correlation matrix only if there is
	more than one parameter.

	* demo/fit.dem:  Update to new syntax. Reduce number of pause statements,
	remove plots which show only the data or duplicate techniques already
	demonstrated.  Add some more comments and plot titles.

	* src/show.c (show_variables):  Avoid extra newline in output.

	* src/win/wgnuplib.h src/win/wgraph.c src/win/wresourc.h term/win.trm:
	Speed up rotating graphs with the mouse by temporarily disabling
	antialiasing.  Add user interface and ini file setting.

2013-04-22  Bastian Maerkisch  <bmaerkisch@web.de>

	* term/win.trm (WIN_options):  Validate argument to title option.

	* term/dumb.trm (DUMB_options):  New option to change aspect ratio of 
	the plot by setting tic lengths. Change default to 2:1, which corresponds
	more to the default fonts found on the systems I tested.

	* src/fit.c|h src/win/wgraph.c src/win/wtext.c:  Unlike on any other
	platform, long fit runs cannot be interrupted on Windows. Fix this
	long standing issue at least for wgnuplot by handling Ctrl-Break.

	* docs/gnuplot.doc:  Update help texts for `fit`.

	* src/win/winmain.c|h (WinRaiseConsole) src/fit.c src/win/wgraph.c
	src/wxterminal/wxt_gui.cpp: Consolidate code to raise console in new
	routine.
